Responsive for the most part. Logo still bugs me how it wraps.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -175,7 +175,7 @@ button {
   display: none;
 }
 
-@media (min-width: 800px){
+@media (min-width: 700px){
   main, nav ul, .logo {
     width: 60%;
     margin-left: 20%;
@@ -194,7 +194,7 @@ button {
   }
 }
 
-@media (max-width:800px) {
+@media (max-width:700px) {
   input {
     width: 90%;
   }
@@ -244,5 +244,9 @@ button {
 
   button {
     display: block;
+    padding: 1%;
+    width: 100%;
+    /*background-color: white;*/
+    color: white;
   }
 }
